@@ -93,7 +93,8 @@ fastcgi.server              = ( ".fcgi" => (
 				    "bin-path" => "@SRCDIR@/fcgi-responder",
 				    "check-local" => "disable",
 				    "max-procs" => 1,
-				    "min-procs" => 1
+				    "min-procs" => 1,
+				    "allow-x-send-file" => "enable",
 				  )
 				)
 			      )
